--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,8 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url = "https://mymaven.bylazar.com/releases"}
+    maven { url = "https://www.matthewo.tech/maven/"}
 }
 
 dependencies {
@@ -16,6 +18,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat-resources:1.7.1'
     implementation 'com.pedropathing:ftc:2.0.4'
     implementation 'com.pedropathing:telemetry:1.0.0'
-    implementation 'com.bylazar:fullpanels:1.0.9'
+    implementation 'com.bylazar:fullpanels:1.0.12'
+    implementation 'org.team11260:fast-load:0.1.2'
+
 }
 
